# AzureDataLakeExample

./: LICENSE  Plan.md  README.md  Tasks.md
lakehouse-app/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pip.ini
lakehouse-app/aas/: model.bim
lakehouse-app/adf/dataset/: bronze_ndjson.json
lakehouse-app/adf/linkedService/: ls-adls.json  ls-functions.json  ls-keyvault.json  ls-synapse-dev.json
lakehouse-app/adf/pipeline/: aas_pause_resume.json  canary_api_health.json  ingest_sales.json  (+4 more)
lakehouse-app/common/: README.md  pyproject.toml
lakehouse-app/common/lakehouse_common/clients/: base_ftp.py  base_http.py
lakehouse-app/common/lakehouse_common/config/: paths.py  settings.py
lakehouse-app/common/lakehouse_common/keyvault/: client.py
lakehouse-app/common/lakehouse_common/logging/: structured.py
lakehouse-app/common/lakehouse_common/validation/: base_rule.py  runner.py
lakehouse-app/ingestion/: function_app.py  requirements.txt
lakehouse-app/monitoring/: canary.py  heartbeat.py
lakehouse-app/pipelines/: deploy-aas-model.yml  deploy-functions.yml  deploy-powerbi.yml  deploy-spark-jobs.yml  deploy-sql-scripts.yml  publish-common.yml  run-integration-tests.yml
lakehouse-app/processing/: requirements.txt
lakehouse-app/scripts/: reset_local_lakehouse.py  seed_local_data.py
lakehouse-app/tests/: conftest.py
lakehouse-infra/: .gitignore  backend.tf  main.tf  outputs.tf  rbac.tf  terraform.tfvars.example  variables.tf
lakehouse-infra/environments/: dev.tfvars  prod.tfvars
lakehouse-infra/pipelines/: tf-apply.yml  tf-plan.yml
(+70 files in other folders)
