[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lakehouse-common"
version = "0.1.0"
description = "Shared utilities for the Azure Data Lakehouse — config, clients, Key Vault, logging, validation."
requires-python = ">=3.10"
dependencies = [
    "azure-identity>=1.15",
    "azure-keyvault-secrets>=4.7",
    "tenacity>=8.2",
    "paramiko>=3.4",
    "structlog>=24.1",
]

[project.optional-dependencies]
spark = [
    "pyspark>=3.5",
    "delta-spark>=3.1",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["lakehouse_common"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
